--- a/css/style.css
+++ b/css/style.css
@@ -36,7 +36,7 @@
     font-family: "Saira Extra Condensed", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
     margin:0px;
     padding: 0px;
-    font-size: 1.5em;
+    font-size: 1.5rem;
   }
 
 
@@ -100,7 +100,7 @@
     margin-left:17rem;
     padding-left: 3rem;
     padding-right: 3rem;
-    padding-top: 9rem;
+    padding-top: 10%;
     padding-bottom: 5rem;
     min-height: 100vh;
     display: flex;
@@ -198,7 +198,7 @@
   }
   .social-icons .social-icon:last-child {
     margin-right: 0;
-    margin-bottom: 6.5rem;
+    margin-bottom: 9.5rem;
   }
   .social-icons .social-icon:hover {
     background-color: #146C94;
@@ -211,16 +211,6 @@
   
   .flex-shrink-0 {
     flex-shrink: 0 !important;
-  }
-
-  .fa-award {
-    color: #146C94;
-    margin-right:0.3em;
-  }
-
-  .awards {
-    margin:0px;
-    padding: 0px;
   }
 
   .list-inline {
@@ -238,6 +228,17 @@
   .dev-icons {
     font-size: 3rem;
     color:#146C94;
+  }
+
+  .awards{
+    margin:0px;
+    padding: 0px;
+  }
+
+  
+  .fa-award {
+    color: #146C94;
+    margin-right:0.3em;
   }
 
   
@@ -268,6 +269,20 @@
 }
 
 @media (max-width: 992px) {
+  body {
+    width: 100vw;
+    max-width: none;
+    height: 100%;
+    margin: 0px;
+    padding:0px;
+  }
+ 
+  .container {
+    margin:0px;
+    padding:0px;
+    font-size: 1.5rem;
+  }
+
   .profile-img {
    display:none;
   }
@@ -282,14 +297,37 @@
     width: 100%;
     top: 0;
     left: 0;
-    margin:10%;
-    padding:0px;
+    margin:0px;
+    padding:2rem;
     min-height: 100vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
     text-align: left;
-    max-width:100%;
+  }
+  .subheading {
+ 
+    font-size: 1.5rem;
+  }
+  .subtitle {
+    font-size: 2.5rem;
+    margin-bottom: 2rem;
+
+  }
+  .d-flex {
+    display: grid !important;
+  
+  }
+
+  .flex-shrink-0 {
+    flex-shrink: 0 !important;
+    font-size:80%;
+    order:-1;
+  }
+
+  .dev-icons {
+    font-size: 2.5rem;
+    color:#146C94;
   }
   
 }
